# Link-Time-Optimizer

./: comparison.txt  pom.xml  readme.txt
c_optimize/: CMakeLists.txt  README  cm.cpp  cm.h  common.h  cvs.cpp  cvs.h  ubuntu-packages.txt
c_optimize/cmake/: FindLPSolve.cmake
doc/: lto.tex
src/main/java/lto/: LTO.java  Utils.java
src/main/java/lto/instrument/: MethodTransformer.java  Transformer.java
src/main/java/lto/libinfo/: AnnotationReader.java  AnnotationsAttribute.java  App.java  Cost.java  CostFn.java  Equivalents.java  InvalidLibraryException.java  Lib.java  LibInfo.java  ListAnnotations.java  Manifest.java
src/main/java/matrix/: App.java  DefaultMatrix.java  EigenDecompMatrix.java  LibraryInfo.java  Manifest.java  Matrix.java  MatrixFactory.java  MatrixOperations.java  MatrixTransforms.java  Utils.java
src/main/java/matrix/normal/: App.java  AppCreator.java  BCELify.java  ClazzTest.java  Cost.java  DefaultMatrix.java  DoTheThing.java  EigenDecompMatrix.java  LibraryInfo.java  Matrix.java  MatrixFactory.java  MatrixOperations.java  MatrixTransforms.java  MatrixUtils.java  Utils.java
src/main/java/old/: AppCreator.java  BCELify.java  ClazzTest.java  DoTheThing.java
src/main/java/optimizer/instrument/: AnnotationReader.java  AnnotationsAttribute.java  App.java  Cost.java  Equivalents.java  Lib.java  LibInfo.java  LibraryInfo.java  Manifest.java  (+3 more)
src/main/java/simple/: HelloWorld.java  NullAgent.java  NullTransformer.java
src/main/java/user/: App.java  AppOptimized.java  Compare.java  CompareList.java  MatrixGenList.java  MatrixGenerator.java
(+15 files in other folders)
